<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.MainActivity">
  <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">
    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/title"
        android:textSize="@dimen/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <!-- Question1 -->
      <TextView
        android:id="@+id/question1titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt"/>
      <TextView
        android:id="@+id/question1questionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1question"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question1titleTxt"/>
      <CheckBox
        android:id="@+id/question1CheckboxContainerization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Containerization"
        app:layout_constraintTop_toBottomOf="@+id/question1questionTxt"/>
      <CheckBox
        android:id="@+id/question1CheckboxObjectOriented"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Object-oriented"
        app:layout_constraintTop_toBottomOf="@+id/question1CheckboxContainerization"/>
      <CheckBox
        android:id="@+id/question1CheckboxInheritance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inheritance"
        app:layout_constraintTop_toBottomOf="@+id/question1CheckboxObjectOriented"/>
      <CheckBox
        android:id="@+id/question1CheckboxPolymorphism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Polymorphism"
        app:layout_constraintTop_toBottomOf="@+id/question1CheckboxInheritance"/>
      <Button
        android:id="@+id/question1submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/question1CheckboxPolymorphism"/>

      <!-- Question2 -->
      <TextView
        android:id="@+id/question2titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question1submitBtn"/>
      <TextView
        android:id="@+id/question2questionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2question"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question2titleTxt"/>
      <RadioGroup
        android:id="@+id/question2RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/question2questionTxt">
        <RadioButton
          android:id="@+id/question2radio1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Interpreted"/>
        <RadioButton
          android:id="@+id/question2radio2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Compiled"/>
      </RadioGroup>
      <Button
        android:id="@+id/question2submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/question2RadioGroup"/>

      <!-- Question3 -->
      <TextView
        android:id="@+id/question3titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question2submitBtn"/>
      <TextView
        android:id="@+id/question3questionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3question"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question3titleTxt"/>
      <RadioGroup
        android:id="@+id/question3RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/question3questionTxt">
        <RadioButton
          android:id="@+id/question3radio1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Yes"/>
        <RadioButton
          android:id="@+id/question3radio2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="No"/>
      </RadioGroup>
      <Button
        android:id="@+id/question3submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/question3RadioGroup"/>

      <!-- Question4 -->
      <TextView
        android:id="@+id/question4titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question4title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question3submitBtn"/>
      <TextView
        android:id="@+id/question4questionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question4question"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/question4titleTxt"/>
      <RadioGroup
        android:id="@+id/question4RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/question4questionTxt">
        <RadioButton
          android:id="@+id/question4radio1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Yes"/>
        <RadioButton
          android:id="@+id/question4radio2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="No"/>
      </RadioGroup>
      <Button
        android:id="@+id/question4submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/question4RadioGroup"/>

      <Button
        android:id="@+id/checkScoreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/chk_score_btn"
        app:layout_constraintTop_toBottomOf="@+id/question4submitBtn"/>

      <TextView
        android:id="@+id/finalScoreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:text="@string/score_txt"
        android:textAlignment="center"
        android:textSize="@dimen/score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkScoreBtn"/>
    </android.support.constraint.ConstraintLayout>
  </ScrollView>



</android.support.constraint.ConstraintLayout>